# deposit-box

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  askama.toml
.github/: dependabot.yml
.github/workflows/: build-different-features.yml  check-and-publish.yml
src/: lib.rs  main.rs
src/impl/: config.rs  geoip.rs  github.rs  markdown.rs  mod.rs  pre_release.rs  release_map.rs  routes.rs  storage.rs  templates.rs  translate.rs
src/impl/artifacttype/: fallback.rs  mod.rs
src/impl/artifacttype/impl/: flathub.rs  flatpak.rs  github.rs  mac64.rs  mac_arm64.rs  mod.rs  pypi.rs  win32.rs  win64.rs
src/impl/nightly/: github_cache.rs  mod.rs
view/static/base/: base.css  mirror-select.js
view/static/theme/skytemple/: theme.css
view/tpl/: b_download_grid.html  p_404.html  p_500.html  p_nightly.html  p_products.html  p_release.html  p_releases.html  page.html
