[package]
name = "deposit-box"
version = "0.1.0"
edition = "2021"

[features]
default = [ "geoip", "pypi", "flatpak", "github", "s3_bucket_list" ]
s3_bucket_list = [ "rust-s3" ]
geoip = [ "geoutils", "public-ip", "maxminddb" ]
pypi = [ ]
flatpak = [ ]
github = [ "octocrab" ]
sort_versions = ["version-compare"]

[dependencies]
async-trait = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.25", features = ["full"] }
rocket = "0.5.0-rc.2"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rust-s3 = { version = "0.32", optional = true }
chrono = "0.4"
# This is past 0.11.0 with updated Rocket to 0.5
askama = { git = "https://github.com/djc/askama.git", rev = "5cdffd6e0e9eb0a408cec6e5a143231e139970fe", features = ["markdown", "with-rocket"] }
askama_rocket = { git = "https://github.com/djc/askama.git", rev = "5cdffd6e0e9eb0a408cec6e5a143231e139970fe" }
octocrab = { version = "0.17", optional = true }
dotenv = "0.15"
regex = "1.7"
lazy_static = "1.4"
itertools = "0.10"
cached = "0.40"
thiserror = "1.0"
indexmap = "1.9"
version-compare = { version = "0.1", optional = true }
geoutils = { version = "0.5", optional = true }
public-ip = { version = "0.2", optional = true }
maxminddb = { version = "0.23", optional = true }
