[package]
name = "deposit-box"
version = "0.5.0"
edition = "2021"

[features]
default = ["geoip", "pypi", "flatpak", "github", "s3_bucket_list", "amazon_translate"]
s3_bucket_list = ["rust-s3"]
geoip = ["geoutils", "public-ip", "maxminddb", "async-compat"]
pypi = []
flatpak = []
github = ["octocrab", "bytes"]
sort_versions = ["version-compare"]
amazon_translate = ["aws-config", "aws-sdk-translate"]

[dependencies]
async-trait = "0.1"
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.33", features = ["full"] }
rocket = "0.5.1"
rocket-accept-language = "0.8.2"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rust-s3 = { version = "0.34", optional = true }
chrono = "0.4"
# This is past 0.11.0 with updated Rocket to 0.5
askama = { version = "0.12.1", features = ["markdown", "with-rocket"] }
askama_rocket = { version = "0.12.0" }
octocrab = { version = "0.38", optional = true }
bytes = { version = "1.6", optional = true }
dotenv = "0.15"
serde_regex = "1.1"
regex = "1.10"
lazy_static = "1.4"
itertools = "0.13"
cached = { version = "0.53", features = ["async"] }
comrak = { version = "0.24" }
thiserror = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
version-compare = { version = "0.2", optional = true }
geoutils = { version = "0.5", optional = true }
public-ip = { version = "0.2", optional = true }
maxminddb = { version = "0.24", optional = true }
aws-config = { version = "1.5", optional = true }
aws-sdk-translate = { version = "1.33", optional = true }
async-compat = { version = "0.2", optional = true }
relativetime = { version = "0.1", features = ["chrono"] }
xdg = "2.5"
